feat(knowledge): regenerate 59 built-in runbooks to v3 schema
All 59 built-in runbooks converted from v2 to v3 structure:
- 6 required H2 sections: Symptom Recognition, Applicability,
  Diagnostic Steps, Causes, Prevention, Sources
- Per-Cause subsections (A–Y + mandatory Cause Z fallback) each with
  Statement (≤300 chars), Mechanism (≤800 chars), Indicator with
  [Step N]/[Symptom]/[Default] tokens, Mitigation, Resolution, Verification
- Match-hint HTML comments with strict JSON predicates where applicable

All 59 files pass kb-validate (v3 validator) with zero errors.

Also updates runbook-content-architecture.md Implementation Status to
reflect v3 rollout complete in the toolkit; documents remaining gaps
(FaultMaven API runbook_validator.py, per-Cause ChromaDB metadata lift).